Rework GamePhase implementation for slightly hardened sub-game handling