@@ -1,55 +1,88 @@
 package com.lovetropics.minigames.common.core.game.impl;
 
 import com.lovetropics.minigames.LoveTropics;
-import com.lovetropics.minigames.common.core.game.GameResult;
+import com.lovetropics.minigames.common.core.game.GameException;
+import com.lovetropics.minigames.common.core.game.IGameDefinition;
 import com.lovetropics.minigames.common.core.game.IGameLookup;
+import com.lovetropics.minigames.common.core.game.IGamePhase;
 import com.lovetropics.minigames.common.core.game.IGamePhaseDefinition;
+import com.lovetropics.minigames.common.core.game.behavior.BehaviorList;
+import com.lovetropics.minigames.common.core.game.map.GameMap;
 import com.lovetropics.minigames.common.core.game.map.IGameMapProvider;
 import com.lovetropics.minigames.common.core.game.state.control.ControlCommandInvoker;
 import com.lovetropics.minigames.common.core.game.util.GameTexts;
 import it.unimi.dsi.fastutil.objects.Reference2ObjectOpenHashMap;
 import net.minecraft.commands.CommandSourceStack;
+import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceKey;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerLevel;
-import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.util.Unit;
-import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
 import net.neoforged.bus.api.SubscribeEvent;
 import net.neoforged.fml.common.EventBusSubscriber;
-import net.neoforged.neoforge.event.entity.EntityTravelToDimensionEvent;
-import net.neoforged.neoforge.event.entity.player.PlayerEvent;
+import net.neoforged.neoforge.event.server.ServerStoppingEvent;
+import net.neoforged.neoforge.event.tick.LevelTickEvent;
+import net.neoforged.neoforge.event.tick.ServerTickEvent;
 
 import javax.annotation.Nullable;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Queue;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
 
 @EventBusSubscriber(modid = LoveTropics.ID)
 public class GamePhaseManager implements IGameLookup {
 	private static final GamePhaseManager INSTANCE = new GamePhaseManager();
 
+	private final Queue<GamePhase> queuedGames = new ArrayDeque<>();
+
 	private final Map<ResourceKey<Level>, List<GamePhase>> gamesByDimension = new Reference2ObjectOpenHashMap<>();
 
 	public static GamePhaseManager get() {
-		return GamePhaseManager.INSTANCE;
+		return INSTANCE;
 	}
 
-	GameResult<Unit> canStartGamePhase(IGamePhaseDefinition definition) {
-		IGameMapProvider map = definition.getMap();
-		List<ResourceKey<Level>> possibleDimensions = map.getPossibleDimensions();
-
-		for (ResourceKey<Level> dimension : possibleDimensions) {
-			List<GamePhase> games = gamesByDimension.getOrDefault(dimension, Collections.emptyList());
-			if (!games.isEmpty()) {
-				return GameResult.error(GameTexts.Commands.GAMES_INTERSECT);
-			}
+	public CompletableFuture<GamePhase> createPhase(GameInstance game, MinecraftServer server, IGameDefinition gameDefinition, IGamePhaseDefinition phaseDefinition) {
+		try {
+			checkCanAddGamePhase(phaseDefinition);
+		} catch (GameException e) {
+			return CompletableFuture.failedFuture(e);
 		}
 
-		return GameResult.ok();
+		CompletableFuture<GameMap> mapFuture = phaseDefinition.getMap().open(server);
+
+		BehaviorList behaviors = phaseDefinition.createBehaviors();
+
+		return mapFuture
+				.thenApplyAsync(map -> {
+					GamePhase phase = new GamePhase(game, gameDefinition, map, behaviors);
+					phase.setFocusedLive(game.lobby.metadata.visibility().isFocusedLive());
+					queuedGames.add(phase);
+					return phase;
+				}, server)
+				.exceptionally(throwable -> {
+					GameException gameException = GameException.unwrap(throwable);
+					if (gameException != null) {
+						throw new CompletionException(gameException);
+					}
+					throw new CompletionException(new GameException(Component.literal("An unexpected exception occurred while creating game phase"), throwable));
+				});
+	}
+
+	void checkCanAddGamePhase(IGamePhaseDefinition definition) throws GameException {
+		IGameMapProvider map = definition.getMap();
+		for (ResourceKey<Level> dimension : map.getPossibleDimensions()) {
+			List<GamePhase> games = gamesByDimension.getOrDefault(dimension, Collections.emptyList());
+			if (!games.isEmpty()) {
+				throw new GameException(GameTexts.Commands.GAMES_INTERSECT);
+			}
+		}
 	}
 
 	@Nullable
@@ -62,12 +95,13 @@ public class GamePhaseManager implements IGameLookup {
 	@Nullable
 	@Override
 	public GamePhase getGamePhaseAt(Level level, Vec3 pos) {
-		return getGamePhaseInDimension(level);
+		List<GamePhase> phases = getGamePhasesForLevel(level);
+		return !phases.isEmpty() ? phases.getFirst() : null;
 	}
 
 	@Nullable
 	@Override
-	public GamePhase getGamePhaseInDimension(Level level) {
+	public IGamePhase getGamePhaseInDimension(Level level) {
 		List<GamePhase> games = gamesByDimension.get(level.dimension());
 		if (games != null && games.size() == 1) {
 			return games.getFirst();
@@ -79,7 +113,7 @@ public class GamePhaseManager implements IGameLookup {
 		if (level.isClientSide()) {
 			return List.of();
 		}
-		return gamesByDimension.getOrDefault(level.dimension(), Collections.emptyList());
+		return gamesByDimension.getOrDefault(level.dimension(), List.of());
 	}
 
 	public ControlCommandInvoker getControlInvoker(CommandSourceStack source) {
@@ -87,64 +121,45 @@ public class GamePhaseManager implements IGameLookup {
 		return phase != null ? phase.controlCommands() : ControlCommandInvoker.EMPTY;
 	}
 
-	void addGamePhaseToDimension(ResourceKey<Level> dimension, GamePhase game) {
-		gamesByDimension.computeIfAbsent(dimension, k -> new ArrayList<>())
-				.add(game);
+	@SubscribeEvent
+	public static void onServerStopping(ServerStoppingEvent event) {
+		INSTANCE.onServerStopping();
 	}
 
-	void removeGamePhaseFromDimension(ResourceKey<Level> dimension, GamePhase game) {
-		List<GamePhase> games = gamesByDimension.get(dimension);
+	@SubscribeEvent
+	public static void onServerTick(ServerTickEvent.Pre event) {
+		INSTANCE.onServerTick();
+	}
+
+	@SubscribeEvent
+	public static void onLevelTick(LevelTickEvent.Post event) {
+		if (event.getLevel() instanceof ServerLevel level) {
+			INSTANCE.onLevelTick(level);
+		}
+	}
+
+	private void onServerStopping() {
+		for (List<GamePhase> phases : gamesByDimension.values()) {
+			phases.forEach(GamePhase::stopForServerShutdown);
+		}
+		gamesByDimension.clear();
+	}
+
+	private void onServerTick() {
+		for (GamePhase queuedGame : queuedGames) {
+			gamesByDimension.computeIfAbsent(queuedGame.dimension(), d -> new ArrayList<>()).add(queuedGame);
+		}
+		queuedGames.clear();
+	}
+
+	private void onLevelTick(ServerLevel level) {
+		List<GamePhase> games = gamesByDimension.get(level.dimension());
 		if (games == null) {
 			return;
 		}
-
-		if (games.remove(game) && games.isEmpty()) {
-			gamesByDimension.remove(dimension, games);
-		}
-	}
-
-	@SubscribeEvent
-	public static void onPlayerTryChangeDimension(EntityTravelToDimensionEvent event) {
-		Entity entity = event.getEntity();
-		if (entity instanceof ServerPlayer player) {
-			ServerLevel targetWorld = player.getServer().getLevel(event.getDimension());
-			if (targetWorld == null) {
-				return;
-			}
-
-			GamePhase playerPhase = INSTANCE.getGamePhaseFor(player);
-			GamePhase targetPhase = (GamePhase) INSTANCE.getGamePhaseAt(targetWorld, player.blockPosition());
-			if (!canTravelBetweenPhases(playerPhase, targetPhase)) {
-				player.displayClientMessage(GameTexts.Commands.cannotTeleportIntoGame(), true);
-
-				event.setCanceled(true);
-			}
-		}
-	}
-
-	private static boolean canTravelBetweenPhases(@Nullable GamePhase from, @Nullable GamePhase to) {
-		if (to == null) {
-			return true;
-		} else if (from == null) {
-			return false;
-		}
-		return from.game.lobby == to.game.lobby;
-	}
-
-	@SubscribeEvent
-	public static void onPlayerChangedDimension(PlayerEvent.PlayerChangedDimensionEvent event) {
-		if (event.getEntity() instanceof ServerPlayer player) {
-			GamePhase phase = INSTANCE.getGamePhaseFor(player);
-			if (phase == null) {
-				return;
-			}
-
-			ResourceKey<Level> dimension = phase.dimension();
-			if (event.getFrom() == dimension && event.getTo() != dimension) {
-				if (phase.game.lobby.getPlayers().remove(player, false)) {
-					player.displayClientMessage(GameTexts.Status.leftGameDimension(), false);
-				}
-			}
+		games.removeIf(GamePhase::tick);
+		if (games.isEmpty()) {
+			gamesByDimension.remove(level.dimension());
 		}
 	}
 }
